--- a/default_theme/package.json
+++ b/default_theme/package.json
@@ -1,84 +1,78 @@
 {
-  "name": "theme-defaults",
-  "displayName": "%displayName%",
-  "description": "%description%",
-  "categories": [
-    "Themes"
-  ],
-  "version": "1.0.0",
-  "publisher": "vscode",
-  "license": "MIT",
-  "engines": {
-    "vscode": "*"
-  },
-  "contributes": {
-    "themes": [
-      {
-        "id": "Default Dark+",
-        "label": "%darkPlusColorThemeLabel%",
-        "uiTheme": "vs-dark",
-        "path": "./themes/dark_plus.json"
-      },
-      {
-        "id": "Default Light+",
-        "label": "%lightPlusColorThemeLabel%",
-        "uiTheme": "vs",
-        "path": "./themes/light_plus.json"
-      },
-      {
-        "id": "Visual Studio Dark",
-        "label": "%darkColorThemeLabel%",
-        "uiTheme": "vs-dark",
-        "path": "./themes/dark_vs.json"
-      },
-      {
-        "id": "Visual Studio Light",
-        "label": "%lightColorThemeLabel%",
-        "uiTheme": "vs",
-        "path": "./themes/light_vs.json"
-      },
-      {
-        "id": "Default High Contrast",
-        "label": "%hcColorThemeLabel%",
-        "uiTheme": "hc-black",
-        "path": "./themes/hc_black.json"
-      },
-      //New update
-      {
-        "id": "Dracular White",
-        "label": "%draculaWhite%",
-        "uiTheme": "vs",
-        "path": "./themes/dracula-dot-min-white.json"
-      },
-      {
-        "id": "Dracular",
-        "label": "%draculaOriginal%",
-        "uiTheme": "vs-dark",
-        "path": "./themes/dracula_original.json"
-      },
-      {
-        "id": "Dracular Darker",
-        "label": "%evondevDark%",
-        "uiTheme": "vs-dark",
-        "path": "./themes/Dracula-darker-contrast.json"
-      },
-      {
-        "id": "Dracular Hight",
-        "label": "%evondevHight%",
-        "uiTheme": "vs-dark",
-        "path": "./themes/Dracula-high-contrast.json"
-      }
-    ],
-    "iconThemes": [
-      {
-        "id": "vs-minimal",
-        "label": "%minimalIconThemeLabel%",
-        "path": "./fileicons/vs_minimal-icon-theme.json"
-      }
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/microsoft/vscode.git"
-  }
+	"name": "theme-defaults",
+	"displayName": "%displayName%",
+	"description": "%description%",
+	"categories": [
+		"Themes"
+	],
+	"version": "1.0.0",
+	"publisher": "vscode",
+	"license": "MIT",
+	"engines": {
+		"vscode": "*"
+	},
+	"contributes": {
+		"themes": [
+			//1 Dracula
+			{
+				"id": "Dracula",
+				"label": "%dracula%",
+				"uiTheme": "vs-dark",
+				"path": "./themes/dracula.json"
+			},
+			//2 Dracula Original
+			{
+				"id": "Dracular Original",
+				"label": "%draculaOriginal%",
+				"uiTheme": "vs-dark",
+				"path": "./themes/dracula_original.json"
+			},
+			//3 Dracula pro
+			{
+				"id": "Dracula Pro",
+				"label": "%draculaPro%",
+				"uiTheme": "vs-dark",
+				"path": "./themes/dracula_pro.json"
+			},
+			//4 Dracula Min White
+			{
+				"id": "Dracular White",
+				"label": "%draculaWhite%",
+				"uiTheme": "vs",
+				"path": "./themes/dracula-dot-min-white.json"
+			},
+			//5 Dracular Darker
+			{
+				"id": "Dracular Darker",
+				"label": "%draculaDark%",
+				"uiTheme": "vs-dark",
+				"path": "./themes/dracula-darker-contrast.json"
+			},
+			//6 Dracular Hight
+			{
+				"id": "Dracular Hight",
+				"label": "%draculaHight%",
+				"uiTheme": "vs-dark",
+				"path": "./themes/dracula-high-contrast.json"
+			},
+			//7 Dracula Normal
+			{
+				"id": "Dracula Normal",
+				"label": "%draculaNormal%",
+				"uiTheme": "vs-dark",
+				"path": "./themes/normal_contrast.json"
+			}
+		],
+		"iconThemes": [
+			{
+				"id": "vs-minimal",
+				"label": "%minimalIconThemeLabel%",
+				"path": "./fileicons/vs_minimal-icon-theme.json"
+			}
+		]
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/microsoft/vscode.git"
+	}
 }
