--- a/settings/user_settings.json
+++ b/settings/user_settings.json
@@ -1,74 +1,13 @@
 {
-  // Editor
-  "editor.fontFamily": " Consolas, Roboto Mono, monospace",
-  "editor.codeLensFontFamily": "Consolas,Roboto Mono, monospace",
-  "editor.formatOnSave": true,
-  "editor.fontSize": 16,
-  "editor.lineHeight": 25,
-  "editor.tabSize": 2,
-  "editor.wordWrap": "on",
-  "editor.formatOnPaste": true,
-  "editor.formatOnType": true,
-  "editor.cursorSmoothCaretAnimation": true,
-  "editor.smoothScrolling": true,
-  "editor.mouseWheelZoom": true,
-  "editor.bracketPairColorization.enabled": true,
-  "editor.cursorWidth": 3,
-  "editor.wordWrapColumn": 90,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.cursorBlinking": "expand",
-  "editor.renderWhitespace": "none",
-  "editor.guides.bracketPairs": true,
-  "editor.letterSpacing": 0.3,
-  "editor.snippetSuggestions": "top",
-  "editor.suggestSelection": "first",
-  "workbench.list.smoothScrolling": true,
-  // "editor.renderLineHighlight": "all",
-  // "editor.renderControlCharacters": false,
-  // "emmet.triggerExpansionOnTab": true,
-  // "editor.inlineSuggest.enabled": true,
-  // "editor.fontLigatures": true,
-  // "editor.guides.highlightActiveIndentation": true,
-  // "editor.guides.bracketPairsHorizontal": "active",
-  // "editor.guides.indentation": false,
-  // "editor.hover.enabled": true,
-  // "editor.codeLens": true,
-  // "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
+  //Editor
+  "eslint.alwaysShowStatus": true,
+  "htmlhint.enable": true,
   "emmet.includeLanguages": {
     "javascript": "javascriptreact",
     "vue-html": "html"
   },
-  //  Files
-  "files.autoSave": "afterDelay",
-  "files.autoSaveDelay": 5000,
-  "files.trimTrailingWhitespace": true,
-  // // Prettier
-  "prettier.singleQuote": true,
-  "prettier.jsxSingleQuote": true,
-  // "prettier.eslintIntegration": true,
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  // // Workbench
-  "workbench.iconTheme": "material-icon-theme",
   "workbench.tree.renderIndentGuides": "none",
-  "workbench.productIconTheme": "fluent-icons",
-  // Explorer
-  "explorer.confirmDelete": false,
-  "explorer.confirmDragAndDrop": false,
-  "explorer.compactFolders": true,
-  // Window
-  "window.closeWhenEmpty": true,
-  "window.autoDetectColorScheme": true,
-  "cSpell.diagnosticLevel": "Hint",
-  "cSpell.language": "en,vi",
-  // Beautify
+  //Beautify
   "beautify.ignore": ["*/test.js", "**/spec/*", "**/test/**/*"],
   "beautify.language": {
     "js": {
@@ -78,21 +17,7 @@
     "css": ["css", "scss"],
     "html": ["html", "php", "erb", "htm"]
   },
-  "javascript.preferences.quoteStyle": "single",
-  "html.format.wrapAttributesIndentSize": 2,
-  "html.format.templating": true,
-  "htmltagwrap.autoDeselectClosingTag": true,
-  "htmltagwrap.tag": "p",
-  "files.eol": "\n",
-  "files.associations": {
-    "*.json": "jsonc"
-  },
-  "files.exclude": {
-    "**/node_modules": true,
-    "**/package-lock.json": true,
-    "**/*.js": { "when": "$(basename).ts" }
-  },
-  // Better comments
+  //Bettercomments
   "better-comments.highlightPlainText": false,
   "better-comments.tags": [
     {
@@ -123,22 +48,7 @@
       "italic": true
     }
   ],
-  // Rainbow
-  "indentRainbow.colors": [
-    "rgba(247, 37, 133,0.07)",
-    "rgba(181, 23, 158,0.07)",
-    "rgba(114, 9, 183,0.07)",
-    "rgba(86, 11, 173,0.07)",
-    "rgba(72, 12, 168,0.07)",
-    "rgba(58, 12, 163,0.07)",
-    "rgba(63, 55, 201,0.07)",
-    "rgba(67, 97, 238,0.07)",
-    "rgba(72, 149, 239,0.07)",
-    "rgba(76, 201, 240,0.07)"
-  ],
-  "indentRainbow.ignoreLinePatterns": ["/[ \t]* [*]/g", "/[ \t]+[/]{2}/g"],
-  "indentRainbow.errorColor": "rgba(rgba(255, 0, 0, 0.4)",
-  // Theme
+  //Theme
   "workbench.colorCustomizations": {
     "terminal.foreground": "#8d8f92",
     "terminal.ansiBlack": "#231F20",
@@ -151,16 +61,9 @@
     "terminal.ansiYellow": "#ffff80"
   },
   "editor.tokenColorCustomizations": {},
-  "git.autofetch": true,
   "editor.linkedEditing": true,
   "editor.inlineSuggest.enabled": true,
-  "workbench.preferredLightColorTheme": "Atom One Light",
-  "workbench.preferredDarkColorTheme": "Aura Soft Dark",
-  "terminal.integrated.defaultProfile.windows": "Git Bash",
-  "workbench.colorTheme": "Aura Soft Dark",
-  "liveServer.settings.donotShowInfoMsg": true,
-  "git.enableSmartCommit": true,
-  // Hirachi Vantara
+  //HirachiVantara
   "terminal.integrated.rendererType": "dom",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
