--- a/settings/user_settings.json
+++ b/settings/user_settings.json
@@ -1,12 +1,73 @@
 {
-  //Editor
-  "eslint.alwaysShowStatus": true,
-  "htmlhint.enable": true,
-  "emmet.includeLanguages": {
-    "javascript": "javascriptreact",
-    "vue-html": "html"
+  "editor.fontFamily": "'Fira Code', Consolas, 'Courier New', monospace",
+  "editor.fontLigatures": true,
+  "editor.inlineSuggest.enabled": true,
+  "editor.tabSize": 2,
+  "editor.fontSize": 16,
+  "editor.wordWrap": "on",
+  "editor.formatOnPaste": true,
+  "editor.formatOnType": true,
+  "editor.formatOnSave": true,
+  "editor.cursorSmoothCaretAnimation": true,
+  "editor.smoothScrolling": true,
+  "editor.mouseWheelZoom": true,
+  "editor.bracketPairColorization.enabled": true,
+  "editor.cursorWidth": 3,
+  "editor.wordWrapColumn": 90,
+  "editor.cursorBlinking": "expand",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.renderLineHighlight": "all",
+  "editor.renderControlCharacters": false,
+  "editor.guides.highlightActiveIndentation": true,
+  "editor.guides.bracketPairsHorizontal": "active",
+  "editor.guides.indentation": false,
+  "editor.guides.bracketPairs": true,
+  "editor.hover.enabled": true,
+  "editor.codeLens": true,
+  "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
+  "editor.letterSpacing": 0.3,
+  "editor.renderWhitespace": "none",
+  "editor.snippetSuggestions": "top",
+  "editor.suggestSelection": "first",
+  "editor.lineHeight": 23,
+  "files.associations": {
+    "*.json": "jsonc",
+    "*.js": "javascriptreact"
   },
-  "workbench.tree.renderIndentGuides": "none",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "cSpell.diagnosticLevel": "Hint",
+  "cSpell.language": "en,vi",
+  "files.eol": "\n",
+  "files.exclude": {
+    "**/node_modules": true,
+    "**/package-lock.json": true,
+    "**/*.js": { "when": "$(basename).ts" }
+  },
+  // Rainbow
+
+  "indentRainbow.colors": [
+    "rgba(247, 37, 133,0.07)",
+    "rgba(181, 23, 158,0.07)",
+    "rgba(114, 9, 183,0.07)",
+    "rgba(86, 11, 173,0.07)",
+    "rgba(72, 12, 168,0.07)",
+    "rgba(58, 12, 163,0.07)",
+    "rgba(63, 55, 201,0.07)",
+    "rgba(67, 97, 238,0.07)",
+    "rgba(72, 149, 239,0.07)",
+    "rgba(76, 201, 240,0.07)"
+  ],
+  "indentRainbow.ignoreLinePatterns": ["/[ \t]* [*]/g", "/[ \t]+[/]{2}/g"],
+  "indentRainbow.errorColor": "rgba(rgba(255, 0, 0, 0.4)",
   //Beautify
   "beautify.ignore": ["*/test.js", "**/spec/*", "**/test/**/*"],
   "beautify.language": {
@@ -17,67 +78,29 @@
     "css": ["css", "scss"],
     "html": ["html", "php", "erb", "htm"]
   },
-  //Bettercomments
-  "better-comments.highlightPlainText": false,
-  "better-comments.tags": [
-    {
-      "tag": "!",
-      "color": "#ff5370",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#eeffff",
-      "bold": true,
-      "italic": false
-    },
-    {
-      "tag": "?",
-      "color": "#82aaff",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "#444267",
-      "bold": true,
-      "italic": false
-    },
-    {
-      "tag": "*",
-      "color": "#c3e88d",
-      "strikethrough": false,
-      "underline": false,
-      "backgroundColor": "transparent",
-      "bold": false,
-      "italic": true
-    }
-  ],
-  //Theme
-  "workbench.colorCustomizations": {
-    "terminal.foreground": "#8d8f92",
-    "terminal.ansiBlack": "#231F20",
-    "terminal.ansiBlue": "#92ffff",
-    "terminal.ansiCyan": "#ff80bf",
-    "terminal.ansiGreen": "#61FFCA",
-    "terminal.ansiMagenta": "#9580ff",
-    "terminal.ansiRed": "#ff9580",
-    "terminal.ansiWhite": "#8d8f92",
-    "terminal.ansiYellow": "#ffff80"
-  },
-  "editor.tokenColorCustomizations": {},
-  "editor.linkedEditing": true,
-  "editor.inlineSuggest.enabled": true,
-  //HirachiVantara
-  "terminal.integrated.rendererType": "dom",
-  "terminal.integrated.cursorBlinking": true,
-  "terminal.integrated.cursorStyle": "line",
-  "typescript.validate.enable": false,
-  "javascript.validate.enable": false,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "workbench.activityBar.visible": true,
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": false
-  },
-  "eslint.format.enable": true,
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "workbench.tree.indent": 4,
-  "diffEditor.ignoreTrimWhitespace": false,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "workbench.startupEditor": "none"
+  "kite.showWelcomeNotificationOnStartup": false,
+  "prettier.singleQuote": true,
+  "prettier.jsxSingleQuote": true,
+  "prettier.eslintIntegration": true,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "explorer.compactFolders": true,
+  "window.closeWhenEmpty": true,
+  "liveServer.settings.donotShowInfoMsg": true,
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 5000,
+  "files.trimTrailingWhitespace": true,
+  "emmet.triggerExpansionOnTab": true,
+  "workbench.productIconTheme": "fluent-icons",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.list.smoothScrolling": true,
+  "workbench.colorTheme": "Aura Soft Dark",
+  "settingsSync.ignoredExtensions": [
+    "github.copilot",
+    "ms-azuretools.vscode-docker",
+    "adpyke.codesnap",
+    "aaron-bond.better-comments",
+    "akamud.vscode-theme-onelight",
+    "davidanson.vscode-markdownlint"
+  ]
 }
